--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 <body>
     <h1> This Is The Main Page </h1>
+    <h3>
+        The Widget to build:
+    <a href="https://azure.microsoft.com/en-us/blog/embed-video-indexer-ai-widgets-in-your-website/" target="_blank">Azure Indexer</a>
+    </h3>
     <div class="container-main">
 
     </div>
