--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
     <title>Main File</title>
 </head>
 <body>
-    <h1> This Is The Main Page </h1>
-    <h3>
-        The Widget to build:
-    <a href="https://azure.microsoft.com/en-us/blog/embed-video-indexer-ai-widgets-in-your-website/" target="_blank">Azure Indexer</a>
-    </h3>
+<h1> This Is The Main Page </h1>
+<h3>
+    The Widget to build:
+    <a href="https://azure.microsoft.com/en-us/blog/embed-video-indexer-ai-widgets-in-your-website/" target="_blank">Azure
+        Indexer</a>
+</h3><br>
+
+<div class="container-main" style="background-color: #8a4182">
     <div class="container-main">
 
     </div>
+</div>
 </body>
 </html>
