--- a/index.html
+++ b/index.html
@@ -13,16 +13,9 @@
     <title>Main File</title>
 </head>
 <body>
-<h1> This Is The Main Page </h1>
-<h3>
-    The Widget to build:
-    <a href="https://azure.microsoft.com/en-us/blog/embed-video-indexer-ai-widgets-in-your-website/" target="_blank">Azure
-        Indexer</a>
-</h3><br>
-
-<div class="container-main" style="background-color: #8a4182">
+<div class="container-main" style="background-color: #8a4182 ">
     <div class="container-main">
-
+        <iframe allowfullscreen="" frameborder="0" width="100%" height="600" src="widgets/videoindexer/videoindexer.html"></iframe>
     </div>
 </div>
 </body>
