--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- JS -->
     <script src="js/main.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/helpers.js"></script>
     <title>Main File</title>
 </head>
 <body>
